--- a/content/blogs/my_life.html
+++ b/content/blogs/my_life.html
@@ -26,8 +26,8 @@ you can take a look at it! When I was 16 I did an exchange to the US,
 and at 18 I moved to the Netherlands to complete my university studies.</p>
 <p>I come from a big family. We are 6 siblings in total. We are all very
 close to each other, which made living with them a lot of fun! There was
-never a dull moment in my house growing up! Their names are: - Carlos -
-Felipe - Fernando - Luis - Carlota</p>
+never a dull moment in my house growing up! Their names are Carlos,
+Felipe, Fernando, Luis, and Carlota</p>
 <p>Now I am beggining to write a new chapter in my life, by moving to
 London and starting the MAM Program with a group of great people! I am
 <strong>very excited</strong> to get started, and can’t wait live great experiences
